# Multi-label-contrastive-comprehensive

./: .gitignore  README.md  encoder_freeze_experiment_plan.txt  encoder_freeze_plan.md  fix.md  pyproject.toml  read_dataset_nan_mask_spec.md  requirements.txt  temp.sh
src/: main.py  parse_config.py  temp.sh
src/backbones/: vision_backbones.py
src/config/: config.json  config_1.json  config_nlp.json  test.json
src/data/: dataloader.py  read_dataset.py  vision_datasets.py
src/data/data/aapd/: test.py
src/model/: baseline_ours.py  baseline_ours_bce.py  linear_layer.py  linear_layer_multiple.py
src/trainer/: basic_utils.py  trainer.py  utils_trainer_vision.py
src/trainer/loss/: loss_contrastive_base.py  loss_contrastive_msc.py  loss_contrastive_mscrg.py  loss_contrastive_mscwrg.py  loss_contrastive_mulsupcon.py  loss_contrastive_nws.py  loss_contrastive_nwswd.py  loss_contrastive_proto_only.py  zlpr.py
src/utils/: ablation.py  utils.py
