[project]
name = "supcon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.3.3",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "pandas==2.1.4",
    "scikit-learn==1.3.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.1",
    "torcheval==0.0.7",
    "torchmetrics==1.1.1",
    "torchvision>=0.15.1",
    "tqdm>=4.67.1",
    "transformers==4.33.0",
    "wandb>=0.22.2",
]
